<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">移 +</string>
    <string name="provider_authorities">com.android.hcframe.sql.HcProvider</string>
    <string name="top_bar_return_btn">返回</string>
    <string name="application_exit">再按一次将退出程序！</string>
    <string name="toast_network_error">网络不可用！</string>
    <string name="toast_accout_not_exist">账号不存在!</string>
    <string name="toast_system_error">网络异常,代码</string>
    <string name="toast_phone_wrong">手机号码格式错误！</string>
    <string name="toast_data_null">没有更多的数据！</string>
    <string name="toast_photo_file_not_exist">图片文件夹创建失败！</string>
    <string name="toast_connect_time_out">网络不给力,请稍后再试.</string>
    <string name="toast_data_error">服务器数据返回错误！</string>
    <string name="toast_login_time_out">用户登录超时，需要重新登录！</string>
    <string name="hint_user">用户名</string>
    <string name="hint_pw">密码</string>
    <string name="forget">忘记密码</string>
    <string name="login_btn">登录</string>
    <string name="user_login">用户登录</string>
    <string name="at_once_login">立即登录</string>
    <string name="next_auto_login">下次自动登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="toast_login_accout_null">账号不能为空！</string>
    <string name="toast_login_pw_null">密码不能为空！</string>
    <string name="toast_login_accout_not_exist">账号不存在!</string>
    <string name="toast_login_pw_error">用户名或密码错误！</string>
    <string name="toast_login_dialog">登录中...</string>
    <string name="toast_login_failed">登录失败！</string>
    <string name="lock_title">设置手势密码</string>
    <string name="lock_pw">绘制解锁图案</string>
    <string name="lock_reset_pw">管理手势密码</string>
    <string name="lock_manager_account">管理帐号</string>
    <string name="lock_pw_again">再次绘制解锁图案</string>
    <string name="lock_pw_short">密码太短</string>
    <string name="lock_pw_error">密码错误</string>
    <string name="lock_pw_not_same">密码不一致</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="action_settings">Settings</string>
    <string name="check_update_tip">正在检测更新</string>
    <string name="update_tip">版本有更新，是否安装更新？ 取消/安装</string>
    <string name="info">提示</string>
    <string name="update_install">安装</string>
    <string name="hello_world">Hello world!</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="download_tip">正在下载，请稍候...</string>
    <string name="netnocon">网络未连接!</string>
    <string name="downloadfailretry">下载升级文件失败，请稍候再试!</string>
    <string name="downloading">正在下载</string>
    <string name="noupdate">不需要升级</string>
    <string name="update_check_fail">升级检测失败</string>
    <string name="update_fail">更新失败</string>
    <string name="insert_card">插入卡</string>
    <string name="down_fail">下载失败</string>
    <string name="is_downing">正在下载</string>
    <string name="down_sucess">下载成功</string>
    <string name="exit">退出</string>
    <string name="newver">新版本：%1$s</string>
    <string name="newvermsg">立即更新，新版本%1$s的精彩功能等你来体验！</string>
    <string name="newvertitle"></string>
    <string name="dialog_cancel">以后再说</string>
    <string name="dialog_ok">马上更新</string>
    <string name="login_btn_inter">登  录</string>
    <string name="settings">设置</string>
    <string name="settings_name_temp">张鸿铭</string>
    <string name="settings_id_temp">ID:sfb_zhm</string>
    <string name="modify_pw_str">修改密码</string>
    <string name="scanlogin_str">扫码登录Web版</string>
    <string name="oa_dbsx_str">代办事宜</string>
    <string name="help">帮助与反馈</string>
    <string name="version_info">版本信息</string>
    <string name="logout">退出登录</string>
    <string name="version_temp">版本：8.6.0</string>
    <string name="logout_toast">注销中...</string>
    <string name="versioning">版本检测中...</string>
    <string name="everpwd">旧密码</string>
    <string name="confirmpwd">确认新密码</string>
    <string name="nowpwd">新密码</string>
    <string name="everpwd_hint">请输入旧密码(6-20位)</string>
    <string name="nowpwd_hint">请输入新密码(6-20位)</string>
    <string name="confirmpwd_hint">请再次输入新密码(6-20位)</string>
    <string name="pwdnull">密码不能为空！</string>
    <string name="pwd_not_equal">两次输入密码不相等！</string>
    <string name="modify_pwding">修改密码中...</string>
    <string name="submit">提交</string>
    <string name="finish">确认修改密码</string>
    <string name="login_user">请输入用户名</string>
    <string name="login_pwd">请输入密码</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开开始刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在获取数据…</string>
    <string name="pleaselogin">请先登陆...</string>
    <string name="net_not_connect">网络未连接！</string>
    <string name="vpnstr">VPN账户:</string>
    <string name="pull_to_refresh_from_bottom_pull_label">上拉获取更多数据…</string>
    <string name="pull_to_refresh_from_bottom_release_label">放开开始获取数据</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="okay">确定</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="cannot_open_document_Reason">无法打开文档： %1$s</string>
    <string name="dismiss">解除</string>
    <string name="cannot_open_document">无法打开文档</string>
    <string name="enter_password">输入密码</string>
    <string name="document_has_changes_save_them_">文档已变更，保存变更吗？</string>
    <string name="cannot_open_buffer">无法打开缓冲器</string>
    <string name="cannot_open_file_Path">无法打开文件：%1$s</string>
    <string name="not_supported">不被支持</string>
    <string name="fill_out_text_field">填充文本字段</string>
    <string name="choose_value">选择值</string>
    <string name="my">我的</string>
    <string name="netaddr">网络地址</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="attach_num">%1$s个附件</string>
    <string name="search_str">搜索</string>
    <string name="publish_time">发布时间</string>
    <string name="doc_source">资料出处</string>
    <string name="main_body">正文: %1$d</string>
    <string name="attachment">附件: %1$d</string>
    <string name="search_content_hint">请输入检索关键字</string>
    <string name="search_none">没有搜索到相关内容</string>
    <string name="history_none">没有历史查看记录</string>
    <string name="none_history_record">没有历史查看记录  先去看看栏目吧</string>
    <string name="return_center_home">返回历史记录</string>
    <string name="main">正文</string>
    <string name="attachmenttext">附件</string>
    <string name="location_retry">没有定位到当前位置,请稍候重试!</string>
    <string name="history_record">历史打开记录</string>
    <string name="search_record">历史搜索记录</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="sum_result">共%1$d条结果</string>
    <string name="sum_pics">%1$d张</string>
    <string name="binding">正在绑定用户...</string>
    <string name="unbinding">正在解除绑定用户...</string>
    <string name="push">推送</string>
    <string name="passpwd">旧密码</string>
    <string name="newpwd">新密码</string>
    <string name="confirmpwd_center">确认密码</string>
    <string name="confirm_modify_pwd">确认修改密码</string>
    <string name="retrieve_pwd">找回密码</string>
    <string name="register_new_user">注册新用户</string>
    <string name="bind_tel">该账户所绑定的手机号为%1$s</string>
    <string name="identify_code">请点击下面按钮获取验证码</string>
    <string name="icode">验证码</string>
    <string name="get_icode">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="push_settings">消息接收设置</string>
    <string name="mobile_num">手机号</string>
    <string name="nickname">昵称</string>
    <string name="confirm_submit">确认提交</string>
    <string name="user_hint">用户名将作为登录账号使用</string>
    <string name="pwd_hint_one">密码由6-20位数字、字母或者半角字符组成</string>
    <string name="pwd_hint_two">区分大小写。</string>
    <string name="pwd_two_error">两次密码输入不一致</string>
    <string name="user_pwd_error">用户名或者密码错误</string>
    <string name="retrieve_one_error">用户名错误、用户名未绑定手机!</string>
    <string name="user_not_null">用户名不能为空!</string>
    <string name="user_account_not_null">用户名或者昵称不能为空!</string>
    <string name="timer_code">%1$s秒后重置</string>
    <string name="new_register_mgr">新注册用户，请联系管理员!</string>
    <string name="photo_header">头像</string>
    <string name="bind_phone">绑定手机</string>
    <string name="nick_hint">来修改一个你满意的昵称吧</string>
    <string name="confirm_modify">确认修改</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="person_center">个人中心</string>
    <string name="modify_scanlogin">扫码登录</string>
    <string name="modify_weblogin">网页授权登录</string>
    <string name="modify_phone">更改绑定手机</string>
    <string name="modify_photo">修改头像</string>
    <string name="bind_cur_phone">目前绑定手机号</string>
    <string name="first_code">如需要更改棒定手机号请先获取验证码</string>
    <string name="bind_new_phone">请输入棒定的新手机号</string>
    <string name="modify_bind_hint">更改后的手机号将作为新的登录账号使用</string>
    <string name="save_photo">保存头像</string>
    <string name="mobile_is_null">手机号不能为空</string>
    <string name="modify_bind_one_is_null">验证码或者手机号不能为空</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="toast_request_network_error">网络不给力,请稍后再试.</string>
    <string name="nickname_is_null">昵称不能为空</string>
    <string name="modify_nickname_hint">修改昵称...</string>
    <string name="about">关于软件</string>
    <string name="feedback">反馈意见</string>
    <string name="funcintro">功能介绍</string>
    <string name="qrcode">软件二维码</string>
    <string name="syssettings">系统设置</string>
    <string name="msg_rec_settings">消息接收管理</string>
    <string name="clear_cache">清理缓存</string>
    <string name="gesture_pwd">手势密码</string>
    <string name="gesture_close">已关闭</string>
    <string name="gesture_open">已打开</string>
    <string name="clear_cach_data">已缓存%1$s</string>
    <string name="feedback_submit">提交反馈意见</string>
    <string name="feedback_hint">请输入内容，至多180字</string>
    <string name="scan_downlaod">扫描下载该软件</string>
    <string name="yijia_version">移加  %1$s</string>
    <string name="welcome_page">欢迎页</string>
    <string name="reverse_feedback">意见反馈</string>
    <string name="discover_new_version">发现新版本</string>
    <string name="check_update">检测更新</string>
    <string name="uploading">正在上传...</string>
    <string name="upload_error">上传失败!</string>
    <string name="upload_success">上传成功</string>
    <string name="update_download_dialog_version">新版本：%1$s</string>
    <string name="update_download_dialog_cancel">以后再说</string>
    <string name="update_download_dialog_ok">马上更新</string>
    <string name="update_service_action">zjhc.soft.startupdateservice</string>
    <string name="no_storage" product="default" msgid="820691042667338625">"使用相机前请先插入 SD 卡。"</string>
    <string name="not_enough_space" product="default" msgid="6655334407957844653">"SD 卡已满。"</string>
    <string name="preparing_sd" product="default" msgid="2914969119574812666">"正在准备 SD 卡..."</string>
	<string name="multiface_crop_help" msgid="3127018992717032779">"轻点一张脸开始裁剪。"</string>
    <string name="framework_network_error">无法连接到网络,请检查网络设置</string>
    <string name="dialog_title_get_data">正在获取数据</string>
    <string name="dialog_title_post_data">正在提交数据</string>
    <string name="dialog_title_load_data">正在加载数据</string>
    <string name="dialog_title_refresh_data">正在刷新数据</string>
    <string name="storage_is_full">"存储空间已满"</string>
    <string name="insert_sd_card">"请插入 SD 卡"</string>
    <string name="done_label">确定</string>
    <string name="day_picker_description">Month grid of days</string>
</resources>